<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTermos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_permission">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/txtPermissao"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgLogo"
                        android:layout_width="215dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/falatron_logo" />

                    <TextView
                        android:id="@+id/txtTermos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/comfortaa_semi_bold"
                        android:gravity="center"
                        android:text="@string/termos_de_servico"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

                    <TextView
                        android:id="@+id/txt1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/comfortaa_semi_bold"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/falatron_um_aplicativo_de_conversao_de_texto_para_fala_usando_inteligencia_artificial_feito_para_geracao_de_conteudo_distribuido_livremente"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtTermos" />

                    <TextView
                        android:id="@+id/txt2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/comfortaa_semi_bold"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/nao_e_permitido_uso_comercial_das_vozes_encontradas_no_aplicativo"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt1" />

                    <TextView
                        android:id="@+id/txt3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/comfortaa_semi_bold"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/todas_as_vozes_no_aplicativo_apesar_de_muito_semelhantes_sao_imitacoes_feitas_por_inteligencia_artificial_nenhum_dos_audios_entregues_aos_usuarios_sao_realmente_da_voz_original"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt2" />

                    <TextView
                        android:id="@+id/txt4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/comfortaa_semi_bold"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/todos_os_audios_gerados_sao_de_completa_responsabilidade_do_usuario_fake_news_ofensas_e_afins_sao_estritamente_proibidas_e_voce_sera_apontado_responsavel_caso_utilizar_para_isso"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt3" />

                    <TextView
                        android:id="@+id/txt5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/comfortaa_semi_bold"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/qualquer_pedido_de_permissao_de_voz_feita_por_terceiros_nao_nos_representam_nao_serao_validos_e_nao_possuem_associacao_com_o_aplicativo"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt4" />

                    <TextView
                        android:id="@+id/txt6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/comfortaa_semi_bold"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/n_o_temos_inten_o_de_prejudicar_a_ind_stria_da_dublagem_ou_a_imagem_pessoal_de_ningu_m"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt5" />

                    <TextView
                        android:id="@+id/txt7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/comfortaa_semi_bold"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/caso_alguma_voz_de_sua_propriedade_esteja_no_aplicativo_sem_permiss_o_nos_encaminhe_um_e_mail_e_iremos_remov_la"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt6" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/comfortaa_semi_bold"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/caso_houver_alguma_voz_de_sua_propriedade_envie_um_email_para_falatron_com_gmail_com_e_iremos_remover_a_voz_imediatamente"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt7" />

                    <TextView
                        android:id="@+id/txt8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/comfortaa_semi_bold"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/se_poss_vel_credite_o_falatron_em_projetos_onde_o_mesmo_utilizado_a_divulga_o_nos_ajuda_a_manter_os_servidores_para_que_continuemos_funcionando_de_forma_gratuita"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView20" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

            <TextView
                android:id="@+id/txtPermissao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/comfortaa_semi_bold"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/pronto_pressione_ok"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@+id/btnOk"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_selected"
                android:fontFamily="@font/comfortaa_semi_bold"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/custom_toolbar" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
